samples/_failures_safe/1761510597_b8a9f3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6370b1a.c: In function ‘main’:
./samples/SAFE/__tmp_f6370b1a.c:142:5: error: expected ‘,’ or ‘;’ at end of input
  142 |     size_t len = strlen
      |     ^~~~~~
./samples/SAFE/__tmp_f6370b1a.c:142:5: error: expected declaration or statement at end of input
